apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    compileSdk 34

    defaultConfig {
        minSdkVersion 19
        targetSdkVersion 34

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"

        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding true
    }
    namespace 'gmutils'
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha06'

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.11.0'

    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.cardview:cardview:1.0.0'

    implementation 'com.squareup.picasso:picasso:2.5.2'

    //retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp:okhttp:2.7.5'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'

    implementation 'com.android.volley:volley:1.2.1'

    implementation 'com.google.code.gson:gson:2.10.1'

    //google
    implementation 'com.google.android.gms:play-services-maps:18.2.0'

    //firebase
    implementation 'com.google.firebase:firebase-analytics:21.6.2'
    implementation 'com.google.firebase:firebase-auth:22.3.1'
    implementation 'com.google.firebase:firebase-database:20.3.1'
    implementation 'com.google.firebase:firebase-storage:20.3.0'
    implementation 'com.google.firebase:firebase-messaging:23.4.1'
    implementation 'com.google.firebase:firebase-config:21.6.3'

    //implementation 'com.github.aabhasr1:OtpView:v1.1.2'
    //implementation 'com.google.zxing:core:3.4.0'

    implementation 'dev.samstevens.totp:totp:1.7.1'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'

    // Room components
    def room_version = '2.6.1'
    implementation "androidx.room:room-runtime:$room_version"

    def multidex_version = "2.0.1"
    implementation "androidx.multidex:multidex:$multidex_version"

}




